--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,15 @@ dependencies:
   marquee: ^2.2.3
   dotted_line: ^3.2.2
   pin_input_text_field: ^4.5.1
+  lottie: ^3.1.2
+  flutter_tts: ^4.0.2
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  fluttertoast: ^8.2.8
+  uuid: ^4.5.1
+  flutter_login: ^5.0.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
+    - assets/lottie_images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
